# cMake_template

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md  compile.cmd  compile.sh  run.cmd  run.sh
docker_opencv4/: Dockerfile
exec/: ciao_mondo.cc  helloWorld.cc  imgDisplay.cc  openCVexec.cc
src/: cvUtils.cc  pippo.cc  utils.cc
src/include/: cvUtils.hh  pippo.hh
